--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,6 +22,9 @@ $light-purple-color:  lighten($purple-color, 25%);
 $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
+$my-color:       #73C9E8 !default;
+$my-color2:       #09B0EC !default;
+
 
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
