--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,11 @@
 
     <!-- Twitter cards -->
     <meta name="twitter:site"    content="@{{ site.twitter_username }}">
-    <meta name="twitter:creator" content="@{{ page.author }}">
+    <meta name="twitter:creator" content="@{{ site.twitter_username }}">
     <meta name="twitter:title"   content="{{ page.title }}">
 
-    {% if page.summary %}
-    <meta name="twitter:description" content="{{ page.summary }}">
+    {% if page.description %}
+    <meta name="twitter:description" content="{{ page.description }}">
     {% else %}
     <meta name="twitter:description" content="{{ site.description }}">
     {% endif %}
