--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,14 @@
     {% endif %}
 
     <!-- Twitter cards -->
-    <meta name="twitter:site"    content="@{{ site.twitter_username }}">
+    <meta name="twitter:site"    content="@leopetrini_">
+    <meta name="twitter:creator" content="@leopetrini_">
+    <meta name="twitter:title"   content="ciao">
+    <meta name="twitter:description" content="ciao">
+    <meta name="twitter:card"  content="summary_large_image">
+    <meta name="twitter:image" content="https://leopetrini.me/assets/img/pairwise_n_it_1.png">
+
+    <!-- <meta name="twitter:site"    content="@{{ site.twitter_username }}">
     <meta name="twitter:creator" content="@{{ site.twitter_username }}">
     <meta name="twitter:title"   content="{{ page.title }}">
 
@@ -37,7 +44,7 @@
       <meta name="twitter:card"  content="summary">
       <meta name="twitter:image" content="{{ site.title_image }}">
     {% endif %}
-    {% endif %}
+    {% endif %} -->
     <!-- end of Twitter cards -->
 
   </head>
