still figuring out twitter cards

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
     <!-- Twitter cards -->
     <meta name="twitter:site"    content="@leopetrini_">
     <meta name="twitter:creator" content="@leopetrini_">
-    <meta name="twitter:title"   content="ciao">
-    <meta name="twitter:description" content="ciao">
-    <meta name="twitter:card"  content="summary_large_image">
-    <meta name="twitter:image" content="https://leopetrini.me/assets/img/pairwise_n_it_1.png">
+    <meta name="twitter:title"   content="{{ page.title }}">
+    <meta name="twitter:description" content="page.description">
+    <meta name="twitter:card"  content="summary">
+    <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
 
     <!-- <meta name="twitter:site"    content="@{{ site.twitter_username }}">
     <meta name="twitter:creator" content="@{{ site.twitter_username }}">
