--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <meta name="twitter:site"    content="@leopetrini_">
     <meta name="twitter:creator" content="@leopetrini_">
     <meta name="twitter:title"   content="{{ page.title }}">
-    <meta name="twitter:description" content="{{ page.description }}">
+    <meta name="twitter:description" content="{{ page.summary }}">
     <meta name="twitter:card"  content="summary">
     <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
 
