minor changes on my notes tags, show future posts in developement env

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     {%- endif -%}
     {% include head.html %}
 
-    {% if site.google_analytics %}
+    {% if site.google_analytics  and jekyll.environment == 'production'%}
     {% include analytics.html %}
     {% endif %}
 
