--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,3 +13,12 @@ $max-content-width: {{ site.max_width }};
   "base",
   "distill"
 ;
+
+th
+        {
+        padding         : .5em 0;
+        }
+td
+        {
+        padding         : .2em .5em;
+        }
